[tool.poetry]
name = "find-flower-ai"
version = "0.1.0"
description = ""
authors = ["duhwan <e.where.people.enjoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.3.5"
torch = "^2.6.0"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pillow = "^11.1.0"
torchvision = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
